--- a/styles/banner.css
+++ b/styles/banner.css
@@ -11,7 +11,7 @@
     top: 0;
     bottom: 0;
     right: 0;
-    background-image: url(../assets/img/Main.jpeg);
+    background-image: url();
     background-size: cover;
     height: auto;
 
