--- a/styles/singup.css
+++ b/styles/singup.css
@@ -1,6 +1,4 @@
-
-
-
+/* Estilos generales del formulario */
 .card {
     padding: 40px 20px 50px 20px;
     margin: 0 auto;
@@ -41,4 +39,11 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
+}
+
+/* Media query para pantallas mayores a 768px */
+@media screen and (min-width: 768px) {
+    .card {
+        max-width: 600px;
+    }
 }
