--- a/styles/components.css
+++ b/styles/components.css
@@ -1,6 +1,4 @@
-/* Resto de tu código CSS ... */
 
-/* Estilos básicos del botón */
 .btn {
     color: #000;
     background-color: #fff;
@@ -11,7 +9,7 @@
     box-shadow: none;
     cursor: pointer;
     border: 1px solid #000;
-    transition: background-color 2s, color 10s, transform 0.3s; /* Agregamos transform a la transición */
+    transition: background-color 2s, color 10s, transform 0.3s;
 }
 
 /* Efecto de vibración al pasar el ratón */
@@ -22,5 +20,3 @@
 .hidden {
     display: none;
 }
-
-/* Resto de tu código CSS ... */
