--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,7 +2,7 @@
 
 .footer {
     background-color: #abe873;
-    padding: 20px 0; /* Ajusta el relleno para que el color se extienda horizontalmente */
+    padding: 20px 0;
     text-align: center;
 
 }
@@ -14,11 +14,10 @@
 }
 
 .social-icons a {
-    margin: 0 10px; /* Espacio entre las redes sociales */
+    margin: 0 10px;
 }
 
-/* Selecciona las imágenes dentro de los enlaces */
 .social-icons a img {
-    width: 30px; /* Ajusta el tamaño de las imágenes según tus necesidades */
+    width: 30px;
     height: 30px;
 }
